--- a/css/style_pagina_iniziale.css
+++ b/css/style_pagina_iniziale.css
@@ -24,22 +24,22 @@ body {
 
 .fade-section {
     position: fixed;  /* L'elemento rimane fisso rispetto alla finestra del browser, quindi non scorre con la pagina */
-    top: 0;           /* Lo posiziona in alto rispetto alla finestra del browser */
-    left: 0;          /* Lo posiziona all'estrema sinistra della finestra */
-    width: 100%;      /* Occupa tutta la larghezza dello schermo */
-    height: 100vh;    /* Occupa tutta l'altezza dello schermo (100% della viewport height) */
+    top: 0;           
+    left: 0;          
+    width: 100%;     
+    height: 100vh;   
     
-    background-color: #f5f1de;  /* Colore di sfondo (un beige chiaro) */
+    background-color: #f5f1de;  
     color: rgb(8, 7, 91);
-    display: flex;              /* Usa il modello di layout flexbox */
-    align-items: center;        /* Centra il contenuto verticalmente */
-    justify-content: center;    /* Centra il contenuto orizzontalmente */
+    display: flex;              
+    align-items: center;        
+    justify-content: center;   
 
     transition: opacity 2s ease-in-out;  /* Anima il cambiamento di opacità in 2 secondi con un effetto di dissolvenza */
     
     z-index: 10;  /* Imposta un livello di profondità più alto per sovrapporsi agli altri elementi della pagina */
     
-    font-family: 'CustomFont', sans-serif;  /* Imposta un font personalizzato per il testo all'interno dell'elemento */
+    font-family: 'CustomFont', sans-serif; 
 }
 
 .hidden {
