--- a/css/visualizza_viaggi.css
+++ b/css/visualizza_viaggi.css
@@ -72,14 +72,14 @@
   
   .card {
     position: absolute;
-    top: 46%;
+    top: 49%;
     left: 50%;
     width: 80vw;
-    height: 80vh;
+    height: 74vh;
     transform: translate(-50%, -50%);
     border-radius: 20px;
     background: white;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
     transition: transform 0.5s ease, opacity 0.5s ease;
     background-size: cover;
   }
