--- a/css/style_login.css
+++ b/css/style_login.css
@@ -14,6 +14,15 @@ body {
   margin: 20px;
   padding-top: 40px;
 }
+  #video-sfondo {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: -2; /* Sotto all'overlay */
+    }
 /* Aggiungi un overlay per la trasparenza */
 body::before {
 content: '';
