--- a/css/visualizza_viaggi.css
+++ b/css/visualizza_viaggi.css
@@ -279,3 +279,50 @@ top: 18px;
   object-fit: contain;
   pointer-events: none; /* evita che il click colpisca l'immagine invece del bottone */
 }
+
+
+@media (max-width: 768px) {
+  .fascia {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+  .logo {
+    width: 50px;
+  }
+
+  .title {
+    font-size: 18px;
+  }
+
+  .notifiche {
+    width: 50px;
+    margin-left: 15px;
+  }
+  .notifiche {
+width: 60px;
+margin-left: 6px; 
+top: 18px;
+}
+
+  .button {
+    padding: 8px 12px;
+    font-size: 14px;
+    margin-left: 10px;
+  }
+
+  .fascia-content {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+  }
+
+  .left-section,
+  .right-section {
+    flex-direction: row;
+    justify-content: center;
+  }
+}
