--- a/css/visualizza_viaggi.css
+++ b/css/visualizza_viaggi.css
@@ -72,7 +72,7 @@
   
   .card {
     position: absolute;
-    top: 49%;
+    top: 42%;
     left: 50%;
     width: 80vw;
     height: 74vh;
@@ -85,8 +85,9 @@
   }
 
   .card-content {
-    width: 50%;
-    padding: 20px;
+    width: 51%;
+    height: 100%;
+    padding: 14px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -212,7 +213,7 @@
   background-color: rgb(223, 219, 181);
   color: #00206c;
   border: none;
-  padding: 10px 15px;
+  padding: 13px 13px;
   border-radius: 5px;
   cursor: pointer;
   font-weight: bold;
